--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -67,7 +67,7 @@
         <div class="card-body">
             {% if page_obj %}
             <div class="table-responsive">
-                <table class="table table-striped table-hover">                    <thead>
+                <table class="table table-striped table-hover customers-table">                    <thead>
                         <tr>                            <th>#</th>
                             <th>كود العميل</th>
                             <th>اسم العميل</th>
